Minor fix on firefox

--- a/src/Components/About Page/SkillsLogos.css
+++ b/src/Components/About Page/SkillsLogos.css
@@ -11,7 +11,7 @@
 
 .logo-box {
   width: auto;
-  height: 0px;
+  height: auto;
   margin: 10px;
   position: relative;
 }
